--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
 
 </head>
 <body>
